
  [ Ron Lee ]
  * cowpoke: Properly strip the arguments to dpkg --compare-versions

  [ Christoph Berg ]
  * debcheckout: Also recognize bzr+ssh:// schema.

  [ Bernhard R. Link ]
  * debchange: fix NMU detection to not NMU QA packages (Closes: #676881)

  [ James McCoy ]
  * debchange: Add more documentation about the effects of changelog
    heuristic.  (Closes: #673974)

 -- David Prévot <taffit@debian.org>  Thu, 31 May 2012 12:12:02 -0400

devscripts (2.11.8) unstable; urgency=low

  [ David Prévot ]
  * French translation update.

  [ James McCoy ]
  * dd-list:
    + Recognize -h argument, as documented.
    + Don't error when given multiple binary packages from the same source.
      (Closes: #672309)
  * Also note DEBCHANGE_MAINTTRAILER change in NEWS entry for 2.11.7.
    (Closes: #672973)
  * dget:
    + Fix handling of sources.list entries with a port. (Closes: #672460) Still
      can't handle entries at the same domain but different ports until
      #154868 is fixed.
  * debcheckout:
    + Document the DEBCHECKOUT_SOURCE configuration variable.
    + Determine the source package name when downloading the source tarball.
      This ensures the downloaded files aren't incorrectly removed after being
      downloaded.
    + Adapt find_repo() to determine the tarball name for native packages.

  [ Benjamin Drung ]
  * debchange:
    + Add --vendor= and DEBCHANGE_VENDOR to override the distributor ID
      returned by dpkg-vendor.
    + Always perform Vendor check.
    + Fall back to Debian vendor when a Debian-specific command-line option
      has been supplied (--nmu, --qa, --bin-nmu, --bpo).
    + Adjust --security template for Ubuntu.
    + Add -R/--rebuild flag for Ubuntu's no-change rebuilds.
    + Append ubuntu1 to version when incrementing on Ubuntu, unless a
      -U/--upstream option is given.
    + On Ubuntu, don't copy the previous distribution name for a new changelog
      entry. Use the Ubuntu devel release.