@@ -1,0 +1,15 @@
+@packagename@ for Debian
+
+
+This package has the sole purpose of installing packages required for
+building the Debian package indicated by its name; it does so by
+depending on these packages:
+
+@depends@
+
+It was generated by the mk-build-deps program from the information in
+the Build-Depends field(s) of the source package.
+
+@packagename@ can be safely removed after the package it was created for
+is built.  If that breaks anything, a dependency is missing in the
+package's Depends field.
